src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((Today() - Date_Of_Birth__c)/365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_CTC__c</fullName>
        <label>Annual CTC</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guntur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhopal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gandhi Nagar</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_EMployee__c</fullName>
        <defaultValue>true</defaultValue>
        <description>For testing of OWD</description>
        <label>Current EMployee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <description>Contains date of birth of an employee.</description>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Joining__c</fullName>
        <label>Date of Joining</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>B.E.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.E.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B Tech.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.Sc</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contains the role of employee</description>
        <label>Role</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name__c  &amp;&quot; &quot; &amp; Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_On_Notice_Period__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check whether the employee is on notice period or not.</description>
        <label>Is On Notice Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Working_Day__c</fullName>
        <label>Last Working Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager_Mail__c</fullName>
        <label>Manager Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Employee__c.Employee_Role__r.Name</field>
                <operation>equals</operation>
                <value>Project Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resignation_Date__c</fullName>
        <label>Resignation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <description>A new filed in the data to test the security on it</description>
        <label>SSN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Salary_Credited_Till_Date__c</fullName>
        <label>Salary Credited Till Date</label>
        <summarizedField>Salary_Details__c.Gross_Salary__c</summarizedField>
        <summaryForeignKey>Salary_Details__c.Credited_To__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Skillset__c</fullName>
        <label>Skillset</label>
        <picklist>
            <picklistValues>
                <fullName>.Net</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C#</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SalesForce.com</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telangana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(  Is_Active__c  ,  IF(  Is_On_Notice_Period__c  ,  IMAGE(&quot;https://c.ap5.content.force.com/servlet/servlet.FileDownload?file=0157F000000NNY4&quot; ,&quot;YELLOW&quot;) ,IMAGE(&quot;https://c.ap5.content.force.com/servlet/servlet.FileDownload?file=0157F000000NNXy&quot;, &quot;Green&quot;) ) , IMAGE(&quot;https://c.ap5.content.force.com/servlet/servlet.FileDownload?file=0157F000000NNY3&quot;, &quot;Red&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Field__c</fullName>
        <description>Contains the copy of role of employee</description>
        <label>Unique Field</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>Contains the pin code  of an employee.</description>
        <label>Zip</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Current_EMployee__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>HR_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Active_Employees</fullName>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Date_of_Joining__c</columns>
        <columns>Last_Working_Day__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Is_On_Notice_Period__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Employees</label>
        <sharedTo>
            <role>HR_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Inactive_employee</fullName>
        <columns>NAME</columns>
        <columns>Full_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Inactive employee</label>
        <sharedTo>
            <role>HR_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Demo_Employee</fullName>
        <filterScope>Queue</filterScope>
        <label>Test</label>
        <queue>Demo</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>EMP-{000000}</displayFormat>
        <label>Employee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <recordTypes>
        <fullName>New_employee_record</fullName>
        <active>true</active>
        <label>New employee record</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Technical</fullName>
        <active>true</active>
        <label>Non Technical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical</fullName>
        <active>true</active>
        <label>Technical</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Enter_Valid_DOB</fullName>
        <active>true</active>
        <errorConditionFormula>Age__c  &lt; 18</errorConditionFormula>
        <errorDisplayField>Date_Of_Birth__c</errorDisplayField>
        <errorMessage>Please enter a valid date of birth.Employee cannot be less than 18 years of age.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Last_Working_Date_Should_Be_Smaller</fullName>
        <active>true</active>
        <errorConditionFormula>Date_of_Joining__c  &gt;  Last_Working_Day__c</errorConditionFormula>
        <errorMessage>Joining Date cannot be greater than Last Working Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Resignation_Date_Validation_Rule</fullName>
        <active>true</active>
        <description>If the employee is on notice period enter the resignation date.</description>
        <errorConditionFormula>if(ISNULL(Resignation_Date__c) , if(Is_On_Notice_Period__c  = true,true,false),false)</errorConditionFormula>
        <errorDisplayField>Resignation_Date__c</errorDisplayField>
        <errorMessage>Employee is on notice period.Please enter resignation Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SSN_Size_Validation</fullName>
        <active>true</active>
        <description>The size of SSN value should be less than 10</description>
        <errorConditionFormula>LEN(TEXT( SSN__c ))  &gt;  10</errorConditionFormula>
        <errorMessage>Only 10 numbers can be input in SSN field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Salary_cannot_be_Process_for_Inactive</fullName>
        <active>true</active>
        <errorConditionFormula>Is_Active__c  = False  &amp;&amp; IF( ISNULL(Annual_CTC__c)  ,FALSE,TRUE)</errorConditionFormula>
        <errorMessage>Salary Cannot be process for Inactive Employee</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_Rule_on_Age</fullName>
        <active>true</active>
        <description>The Age should be between 21 - 30</description>
        <errorConditionFormula>Age__c &gt; 30  ||   Age__c  &lt; 21</errorConditionFormula>
        <errorMessage>Age Should be in between 21 years to 30 years</errorMessage>
    </validationRules>
</CustomObject>